# fred_pandas.py

./: .gitignore  README.md  fred_pandas.py  pyproject.toml
src/fred_pandas/: __init__.py  fred_pandas.py
